--- a/style/style.css
+++ b/style/style.css
@@ -170,8 +170,9 @@ body{
   padding: 10px 20px;
   background-image: url(../assets/handshake.jpg);
   background-color:#FFFFFF;
-  width: 100%;
-  height: 120px;
+  border-radius: 8px;
+  margin-left: 370px;
+  margin-right: 370px;
 }
 .submit{
   font-size: 20px;
@@ -184,9 +185,16 @@ body{
   width: 25%;
   background-color: white;
   border-radius: 8px;
+
+  
 }
 .footer-mama{
   display:flex;
   justify-content: space-between;
   padding-right: 12%;
+}
+.footer-1{
+  margin-left: 370px;
+  margin-right: 370px;
+  text-align: center;
 }
